# archynotch

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md
extra/: archynotch.desktop
src/: app.rs  config.rs  main.rs
src/audio/: mod.rs
src/mpris/: client.rs  mod.rs
src/ui/: overlay.rs
src/visualizers/: mod.rs
